--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "axios-cache-interceptor": "^1.6.2",
     "framer-motion": "^11.14.3",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
